ripped out a lot of the quickstart stuff

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="TsLWj4[^1N<7nrI/>EkyPDTO[dnh<7_R[j;cN0:lGK6Mm`0048C@3PK]4KR6HobL"
+application.secret="TsLWj3[^1N<7nrI/>EkyPDTO[dnh<7_R[j;cN0:lGK6Mm`0048C@3PK]4KR6HobM"
 
 # Database configuration
 # ~~~~~ 
@@ -17,12 +17,12 @@ application.secret="TsLWj4[^1N<7nrI/>EkyPDTO[dnh<7_R[j;cN0:lGK6Mm`0048C@3PK]4KR6
 # db.default.user=sa
 # db.default.password=
 
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:"${DATABASE_URL_DB}
-db.default.user=${DATABASE_USERNAME_DB}
-db.default.password=${DATABASE_PASSWORD_DB}
-db.default.maxConnectionsPerPartition=10
-db.default.partitionCount=2
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:"${DATABASE_URL_DB}
+#db.default.user=${DATABASE_USERNAME_DB}
+#db.default.password=${DATABASE_PASSWORD_DB}
+#db.default.maxConnectionsPerPartition=10
+#db.default.partitionCount=2
 
 # Logger
 # ~~~~~
