--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,3 +37,6 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Application specific config
+
+application.googlekey = ${GOOGLE_API_KEY}
