framework for displaying data sources as they come in

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,4 +39,5 @@ logger.application=DEBUG
 
 # Application specific config
 
-application.googlekey = ${GOOGLE_API_KEY}
+google.apikey = AIzaSyAiXzyJbKX761pBDH1_W4enH5UYEAzQlBY
+kimono.apikey = 19bf8907e84a2fb0a7814f9c5ca7bfb9
